--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,8 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<h1>Valiutu kursai </h1>
+<table class="rwd-table" id="tableCurrency">
+</table>
+    <script src="underscore.js"></script>
+    <script type="module" src="app.js" ></script>
 </body>
 </html>
