Fixed shadow paramter now geting to table todo: add input for js function getting date parameter

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,9 +9,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Valiutu kursai </h1>
-<table class="rwd-table" id="tableCurrency">
-</table>
+<h1 class="text">Valiutu kursai </h1>
+<div class="flex-container">
+    <div class="table1">
+        <table class="rwd-table" id="tableCurrency1">
+        </table>
+    </div>
+    <div class="table2">
+        <table class="rwd-table" id="tablePkytis">
+            <th>
+                Pokytis
+            </th>
+        </table>
+    </div>
+    <div class="table3">
+        <table class="rwd-table" id="tableCurrency2">
+        </table>
+    </div>
+</div>
+
+
+
     <script src="underscore.js"></script>
     <script type="module" src="app.js" ></script>
 </body>
